--- a/ML/KNN/3.0-KNNClassifier.ipynb
+++ b/ML/KNN/3.0-KNNClassifier.ipynb
@@ -55,7 +55,7 @@
        "       ...,\n",
        "       [-0.75602574, -0.51816111, -2.20382324],\n",
        "       [ 0.56066316, -0.07335845, -2.15660348],\n",
-       "       [-1.87521902, -1.11380394, -4.04620773]])"
+       "       [-1.87521902, -1.11380394, -4.04620773]], shape=(1000, 3))"
       ]
      },
      "execution_count": 3,
@@ -215,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.11.9)",
    "language": "python",
    "name": "python3"
   },
@@ -229,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
